revisao de copy e estilo

--- a/src/pages/menu.module.css
+++ b/src/pages/menu.module.css
@@ -58,6 +58,8 @@
     justify-content: start;
     flex-direction: column;
     list-style-type: none;
+    text-transform: uppercase;
+    margin-left: 1.3rem;
   }
 
   .itemOpen .linkOpen {
